# seacat-backtest

./: .gitignore  GIT_COMMANDS.txt  LICENSE  README-V1.2.10-patch.txt  README-V1.2.11-patch.txt  README-V1.2.14.txt  README-V1.2.15.txt  README-V1.2.16.txt  README-V1.2.17.txt  README-V1.2.18.txt  README-V1.2.19.txt  README-V1.2.2.txt  README-V1.2.20.txt  README-V1.2.21.txt  README-V1.2.22.txt  README-V1.2.23.txt  README-V1.2.24.txt  README-V1.2.25.txt  README-V1.2.26.txt  README-V1.2.27.txt  README-V1.2.28.txt  README-V1.2.29.txt  README-V1.2.3.txt  README-V1.2.30.txt  README-V1.2.31.txt  README-V1.2.33.txt  README-V1.2.35.txt  README-V1.2.36.1.txt  README-V1.2.37.txt  README-V1.2.38.txt  README-V1.2.39.txt  README-V1.2.4.txt  README-V1.2.46.txt  README-V1.2.47.txt  README-V1.2.48.txt  README-V1.2.49.txt  README-V1.2.5.txt  README-V1.2.50.txt  README-V1.2.51.txt  README-V1.2.52.txt  (+23 more)
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: roadmap.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/indicators/: IndicatorCenterModal.tsx  IndicatorEditModal.tsx  IndicatorPickerModal.tsx  indicatorDefaults.ts  indicatorTypes.ts  indicatorUtils.ts  types.ts
src/pages/: Training.tsx
src/styles/: global.css
