[package]
name = "seacat-backtest"
version = "1.2.18"
description = "SeaCat Backtest desktop shell"
authors = ["seacat1024"]
edition = "2021"

[lib]
name = "seacat_backtest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
